-Now you can strike out the text

2000-05-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Improved layout management in kspread_dlg_layout->font.

2000-05-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put a vertical text  example : a
                                            b
                                            c
                                            g
This is an optional function.
=>you can show this function if you used kedittoolbar and add "Vertical text"
As kedittoolbar doesn't work for this moment, add this line to your
personal kspread.rc file
<Action name="verticaltext"/>

(Note from David: if it didn't appear, delete the local kspread.rc file...)

2000-05-21 -David Faure <faure@kde.org>
---------------------------------------
-Small speedup in KSpreadTable::recalc.
-Major speedup in changeNameCellRef, which changes texts but doesn't update
dependencies - no need for that since we recalc the tables first.
In my big document, it took _forever_ when inserting a row.
-KSpreadCell::setText is now KSpreadCell::setCellText to help grepping :),
and added bool updateDepends for the above

-Removed duplicate call to map->update in load, since completeLoading does it
-Fixed kspreadfunc_app by adding KSpreadFactory::dcopObject
-Removed some unused stuff (sig_updateCell etc.)
-KSpreadTable::emit_updateCell() is now KSpreadTable::updateCell() (doesn't emit)
-Some other renamings to help finding things (e.g. popup-menu slots).
-New kdebug area: 36002, for the cell dependency stuff, very verbose output.
Laurent, use kdebugdialog to turn it off so that it won't annoy you :)
-Added some missing m_pDoc->setModified( true ) (for insert/remove row/column)

-I get some strange "QPainter: Internal error; no available GC" when inserting a row...
They come from the regionInvalidated stuff and I got 507 levels of recursive calls in
the backtrace :(